[gd_scene load_steps=8 format=3 uid="uid://b5rr033v7tan6"]

[ext_resource type="Texture2D" uid="uid://b0wamvi86dapt" path="res://milky-way-2695569_1280.jpg" id="1_xe51j"]
[ext_resource type="Script" path="res://scenes/mainmenu.gd" id="2_cfq7d"]
[ext_resource type="Texture2D" uid="uid://5irg5y6nhi8k" path="res://Ranger_SoulT (1) (1).png" id="3_aabb2"]
[ext_resource type="Script" path="res://scenes/Rangerresolutiondimonstration.gd" id="4_cy2u7"]
[ext_resource type="Texture2D" uid="uid://cxnhd46onaaea" path="res://check.png" id="5_6dpmo"]
[ext_resource type="AudioStream" uid="uid://c46jahoosoqh" path="res://sounds/Ranger says Also.wav" id="5_tlmfh"]
[ext_resource type="AudioStream" uid="uid://clwejjethbnse" path="res://sounds/hit2.wav" id="6_crowa"]

[node name="Main menu" type="Node2D"]

[node name="BG" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_xe51j")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3.445, 3.445)

[node name="CanvasGroup" type="CanvasGroup" parent="Camera2D"]
script = ExtResource("2_cfq7d")

[node name="Main" type="Node2D" parent="Camera2D/CanvasGroup"]
position = Vector2(-457.22, 122.665)
scale = Vector2(0.5, 0.5)

[node name="Play" type="Button" parent="Camera2D/CanvasGroup/Main"]
offset_left = -106.0
offset_top = -10.0
offset_right = -65.0
offset_bottom = 21.0
focus_neighbor_right = NodePath("../Challenges")
focus_neighbor_bottom = NodePath("../Credits")
text = "Play"

[node name="Options" type="Button" parent="Camera2D/CanvasGroup/Main"]
offset_left = 58.0
offset_top = -10.0
offset_right = 128.0
offset_bottom = 21.0
focus_neighbor_left = NodePath("../Challenges")
focus_neighbor_bottom = NodePath("../Credits")
text = "Options"

[node name="Back3" type="Button" parent="Camera2D/CanvasGroup/Main"]
offset_left = -180.0
offset_top = 165.89
offset_right = -135.0
offset_bottom = 196.89
text = "Back
"

[node name="Back2" type="Button" parent="Camera2D/CanvasGroup/Main"]
offset_left = -616.0
offset_top = -98.0
offset_right = -571.0
offset_bottom = -67.0
text = "Back
"

[node name="Back" type="Button" parent="Camera2D/CanvasGroup/Main"]
offset_left = -151.555
offset_top = -382.0
offset_right = -106.555
offset_bottom = -351.0
focus_neighbor_right = NodePath("../Debug")
focus_neighbor_bottom = NodePath("../hitsound")
text = "Back
"

[node name="Debug" type="CheckButton" parent="Camera2D/CanvasGroup/Main"]
offset_left = 58.445
offset_top = -390.0
offset_right = 156.445
offset_bottom = -359.0
focus_neighbor_left = NodePath("../Back")
focus_neighbor_bottom = NodePath("../SFX")
text = "Debug"

[node name="SFX" type="HSlider" parent="Camera2D/CanvasGroup/Main"]
offset_left = 66.445
offset_top = -332.0
offset_right = 160.445
offset_bottom = -316.0
focus_neighbor_left = NodePath("../hitsound")
focus_neighbor_top = NodePath("../Debug")
focus_neighbor_bottom = NodePath("../Music")
max_value = 200.0
value = 100.0

[node name="SFXLabel" type="Label" parent="Camera2D/CanvasGroup/Main"]
offset_left = 66.445
offset_top = -352.0
offset_right = 106.445
offset_bottom = -326.0
text = "SFX"

[node name="Music" type="HSlider" parent="Camera2D/CanvasGroup/Main"]
offset_left = 66.445
offset_top = -286.0
offset_right = 160.445
offset_bottom = -270.0
focus_neighbor_left = NodePath("../Resolution")
focus_neighbor_top = NodePath("../SFX")
focus_neighbor_bottom = NodePath("../controler?")
max_value = 200.0
value = 90.0

[node name="MusicLabel" type="Label" parent="Camera2D/CanvasGroup/Main"]
offset_left = 66.445
offset_top = -312.0
offset_right = 120.445
offset_bottom = -286.0
text = "Music: "

[node name="Resolution" type="HSlider" parent="Camera2D/CanvasGroup/Main"]
offset_left = -159.67
offset_top = -286.0
offset_right = -91.67
offset_bottom = -270.0
focus_neighbor_top = NodePath("../hitsound")
focus_neighbor_right = NodePath("../Music")
focus_neighbor_bottom = NodePath("../Middleclickfunc")
min_value = 50.0
max_value = 720.0
step = 10.0
value = 480.0

[node name="Resolutionlabel" type="Label" parent="Camera2D/CanvasGroup/Main"]
offset_left = -162.03
offset_top = -312.0
offset_right = -79.03
offset_bottom = -286.0
text = "Resolution"

[node name="Rangerresolutiondimonstration" type="Sprite2D" parent="Camera2D/CanvasGroup/Main"]
position = Vector2(-172, -366.51)
scale = Vector2(0.05, 0.05)
texture = ExtResource("3_aabb2")
script = ExtResource("4_cy2u7")

[node name="hitsound" type="CheckButton" parent="Camera2D/CanvasGroup/Main"]
offset_left = -151.555
offset_top = -332.0
offset_right = -107.555
offset_bottom = -308.0
focus_neighbor_top = NodePath("../Back")
focus_neighbor_right = NodePath("../SFX")
focus_neighbor_bottom = NodePath("../Resolution")

[node name="hitsoundlabel" type="Label" parent="Camera2D/CanvasGroup/Main"]
offset_left = -161.555
offset_top = -352.0
offset_right = -88.555
offset_bottom = -326.0
text = "hit sound"

[node name="Challenges" type="Button" parent="Camera2D/CanvasGroup/Main"]
offset_left = -46.0
offset_top = -8.51001
offset_right = 46.0
offset_bottom = 22.49
focus_neighbor_left = NodePath("../Play")
focus_neighbor_right = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Credits")
text = "Challenges
"

[node name="Challenges2" type="Label" parent="Camera2D/CanvasGroup/Main"]
offset_left = -624.03
offset_top = -70.0
offset_right = -252.03
offset_bottom = 86.0
text = "Win in 1:30                                           
Win without hitting 20 stars
Win without using autofire
Win at the lowest resolution
Win without getting hit
Die in 10 seconds
"

[node name="winwithouthavinganystars" type="Sprite2D" parent="Camera2D/CanvasGroup/Main/Challenges2"]
visible = false
position = Vector2(224.435, 40)
texture = ExtResource("5_6dpmo")

[node name="winin130" type="Sprite2D" parent="Camera2D/CanvasGroup/Main/Challenges2"]
visible = false
position = Vector2(94, 14)
texture = ExtResource("5_6dpmo")

[node name="winwithnoautofire" type="Sprite2D" parent="Camera2D/CanvasGroup/Main/Challenges2"]
visible = false
position = Vector2(220, 64)
texture = ExtResource("5_6dpmo")

[node name="winatlowestresolution" type="Sprite2D" parent="Camera2D/CanvasGroup/Main/Challenges2"]
visible = false
position = Vector2(228, 90)
texture = ExtResource("5_6dpmo")

[node name="winwithoutgettinghit" type="Sprite2D" parent="Camera2D/CanvasGroup/Main/Challenges2"]
visible = false
position = Vector2(188, 118)
texture = ExtResource("5_6dpmo")

[node name="diein10seconds" type="Sprite2D" parent="Camera2D/CanvasGroup/Main/Challenges2"]
visible = false
position = Vector2(144, 144)
texture = ExtResource("5_6dpmo")

[node name="Delete Save File" type="Button" parent="Camera2D/CanvasGroup/Main"]
offset_left = 82.0
offset_top = -208.51
offset_right = 212.0
offset_bottom = -177.51
scale = Vector2(0.5, 0.5)
focus_neighbor_left = NodePath("../Middleclickfunc")
focus_neighbor_top = NodePath("../controler?")
text = "Delete Save File"

[node name="Middleclickfunc" type="CheckButton" parent="Camera2D/CanvasGroup/Main"]
offset_left = -152.0
offset_top = -254.51
offset_right = -108.0
offset_bottom = -230.51
focus_neighbor_top = NodePath("../Resolution")
focus_neighbor_right = NodePath("../controler?")

[node name="Middleclickfunclabeltext2" type="Label" parent="Camera2D/CanvasGroup/Main"]
offset_left = 78.44
offset_top = -249.33
offset_right = 266.44
offset_bottom = -223.33
scale = Vector2(0.5, 0.5)
text = "Mouse               Controler"

[node name="Middleclickfunclabeltext" type="Label" parent="Camera2D/CanvasGroup/Main"]
offset_left = -166.0
offset_top = -266.51
offset_right = -17.0
offset_bottom = -240.51
scale = Vector2(0.5, 0.5)
text = "Middle Click - Move"

[node name="Credits" type="Button" parent="Camera2D/CanvasGroup/Main" node_paths=PackedStringArray("shortcut_context")]
offset_left = -32.0
offset_top = 65.49
offset_right = 31.0
offset_bottom = 96.49
focus_neighbor_top = NodePath("../Challenges")
shortcut_context = NodePath("../Back3")
text = "Credits"

[node name="Label" type="Label" parent="Camera2D/CanvasGroup/Main"]
offset_left = -98.0
offset_top = 165.89
offset_right = 339.0
offset_bottom = 581.89
scale = Vector2(0.44, 0.44)
text = "Credits

Music
 1NF3$+@+!0N by DM DOKURO
1NF3$+@+!0N (Electric Zoo Remix) by SiIva Gunner
Got an Energy Sphere from Kirbys Return to Dream Land

Sound Effect Sources
Kirby Super Star
Kirby's Adventure
Ranger the Warrior

Ranger Soul Form art by Ranger the Warrior

Programming
EpaicRanger the Warrior fan 2001"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Camera2D/CanvasGroup/Main"]
offset_left = 818.44
offset_top = -341.33
offset_right = 1018.44
offset_bottom = -263.33
text = "Left click to shoot.
Right  click to rapid shoot.
"

[node name="Label2" type="Label" parent="Camera2D/CanvasGroup/Main"]
offset_left = 950.44
offset_top = -235.33
offset_right = 1098.21
offset_bottom = -157.33
text = "- Has I-frames.

- Has no I-frames."

[node name="Hard Mode" type="Button" parent="Camera2D/CanvasGroup/Main"]
offset_left = 820.44
offset_top = -187.33
offset_right = 951.44
offset_bottom = -156.33
focus_neighbor_left = NodePath("../Back4")
focus_neighbor_top = NodePath("../Easy Mode")
text = "Play Hard Mode"

[node name="Easy Mode" type="Button" parent="Camera2D/CanvasGroup/Main"]
offset_left = 820.44
offset_top = -237.33
offset_right = 947.44
offset_bottom = -206.33
focus_neighbor_left = NodePath("../Back4")
focus_neighbor_top = NodePath("../Back4")
focus_neighbor_bottom = NodePath("../Hard Mode")
text = "Play Easy Mode"

[node name="Back4" type="Button" parent="Camera2D/CanvasGroup/Main"]
offset_left = 736.44
offset_top = -335.33
offset_right = 781.44
offset_bottom = -304.33
focus_neighbor_right = NodePath("../Easy Mode")
focus_neighbor_bottom = NodePath("../Easy Mode")
text = "Back
"

[node name="controler?" type="CheckButton" parent="Camera2D/CanvasGroup/Main"]
offset_left = 98.0
offset_top = -255.0
offset_right = 142.0
offset_bottom = -231.0
focus_neighbor_left = NodePath("../Middleclickfunc")
focus_neighbor_top = NodePath("../Music")
focus_neighbor_bottom = NodePath("../Delete Save File")

[node name="0" type="AudioStreamPlayer2D" parent="Camera2D/CanvasGroup"]
stream = ExtResource("5_tlmfh")

[node name="1" type="AudioStreamPlayer2D" parent="Camera2D/CanvasGroup"]
stream = ExtResource("6_crowa")

[connection signal="pressed" from="Camera2D/CanvasGroup/Main/Play" to="Camera2D/CanvasGroup" method="_on_button_pressed"]
[connection signal="pressed" from="Camera2D/CanvasGroup/Main/Options" to="Camera2D/CanvasGroup" method="_on_options_pressed"]
[connection signal="button_down" from="Camera2D/CanvasGroup/Main/Back3" to="Camera2D/CanvasGroup" method="_on_back_button_down"]
[connection signal="button_down" from="Camera2D/CanvasGroup/Main/Back2" to="Camera2D/CanvasGroup" method="_on_back_button_down"]
[connection signal="button_down" from="Camera2D/CanvasGroup/Main/Back" to="Camera2D/CanvasGroup" method="_on_back_button_down"]
[connection signal="pressed" from="Camera2D/CanvasGroup/Main/Debug" to="Camera2D/CanvasGroup" method="_on_check_button_pressed"]
[connection signal="changed" from="Camera2D/CanvasGroup/Main/SFX" to="Camera2D/CanvasGroup" method="_on_sfx_changed"]
[connection signal="changed" from="Camera2D/CanvasGroup/Main/Music" to="Camera2D/CanvasGroup" method="_on_music_changed"]
[connection signal="value_changed" from="Camera2D/CanvasGroup/Main/Resolution" to="Camera2D/CanvasGroup" method="_on_resolution_value_changed"]
[connection signal="pressed" from="Camera2D/CanvasGroup/Main/hitsound" to="Camera2D/CanvasGroup" method="_on_hitsound_pressed"]
[connection signal="pressed" from="Camera2D/CanvasGroup/Main/Challenges" to="Camera2D/CanvasGroup" method="_on_challenges_pressed"]
[connection signal="pressed" from="Camera2D/CanvasGroup/Main/Delete Save File" to="Camera2D/CanvasGroup" method="_on_delete_save_file_pressed"]
[connection signal="pressed" from="Camera2D/CanvasGroup/Main/Credits" to="Camera2D/CanvasGroup" method="_on_credits_pressed"]
[connection signal="pressed" from="Camera2D/CanvasGroup/Main/Hard Mode" to="Camera2D/CanvasGroup" method="_on_hard_mode_pressed"]
[connection signal="pressed" from="Camera2D/CanvasGroup/Main/Easy Mode" to="Camera2D/CanvasGroup" method="_on_easy_mode_pressed"]
[connection signal="button_down" from="Camera2D/CanvasGroup/Main/Back4" to="Camera2D/CanvasGroup" method="_on_back_button_down"]
[connection signal="pressed" from="Camera2D/CanvasGroup/Main/controler?" to="Camera2D/CanvasGroup" method="_on_controler_pressed"]
